overlap issue

--- a/src/App.css
+++ b/src/App.css
@@ -59,11 +59,12 @@
   align-items: center;
   justify-content: space-between;
   margin: 20px;
-  width:700px;
+  width:650px;
   gap:2rem;
   position: relative;
   box-shadow: 0px 5px 15px 2px #ccc;
   padding:10px;
+  box-sizing: border-box;
 }
 .content-wrapper > .right {
   position: absolute;
